@@ -1,3 +1,9 @@
+2009-09-22  Darin Adler  <darin@apple.com>
+
+        Reviewed by Sam Weinig.
+
+        * wtf/Forward.h: Added PassOwnPtr.
+
 2009-09-22  Yaar Schnitman  <yaar@chromium.org>
 
         Reviewed by David Levin.
